# tibber-unofficial

./: .gitignore  CHANGELOG.md  CLAUDE.md  HACS_SETUP.md  HACS_VALIDATION_FIX.md  LICENCE  LICENSE  README.md  hacs.json  info.md  mypy.ini  pyproject.toml  pytest.ini  readme.md  requirements-test.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: lint.yaml  release.yml  test.yaml  validate.yaml
custom_components/tibber_unofficial/: __init__.py  api.py  cache.py  config_flow.py  const.py  diagnostics.py  manifest.json  options_flow.py  rate_limiter.py  repairs.py  sensor.py  services.py  services.yaml  storage.py  strings.json
custom_components/tibber_unofficial/translations/: en.json  nl.json
images/: README.md
tests/: conftest.py  test_api.py  test_bug_fixes.py  test_cache.py  test_config_flow.py  test_coordinator.py  test_gold_standard.py  test_sensor.py
