[project]
name = "tibber_unofficial"
version = "2025.06.1"
description = "Home Assistant custom integration for Tibber Homevolt and EV Grid Rewards"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
    "PL",  # pylint
    "ASYNC", # flake8-async
]

ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "SIM108",  # use ternary operator (sometimes less readable)
    "C901",    # too complex (we'll handle complexity case by case)
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0915", # too many statements
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "PLR2004", # magic values are fine in tests
    "S101",    # assert is fine in tests
    "SLF001",  # private member access is fine in tests
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["custom_components.tibber_unofficial"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "asyncio: mark test as an asyncio test",
]

[tool.mypy]
python_version = "3.12"
platform = "linux"
show_error_codes = true
follow_imports = "silent"
local_partial_types = true

# Strictness - Balanced for Home Assistant development
strict_equality = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
check_untyped_defs = true

# Relaxed for HA compatibility - HA's type system has many Any types
disallow_untyped_calls = false      # HA libraries have many untyped calls
disallow_untyped_decorators = false # HA decorators aren't fully typed
disallow_incomplete_defs = false    # Partial typing is acceptable
disallow_untyped_defs = false       # Not all defs need types in HA context
disallow_subclassing_any = false    # HA base classes may be Any
warn_return_any = false             # HA APIs often return Any

# Reduced noise
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "homeassistant.*",
    "voluptuous",
    "aiohttp",
]
ignore_missing_imports = true

# Relax checks for our integration code to work with HA's Any types
[[tool.mypy.overrides]]
module = "custom_components.tibber_unofficial.*"
disable_error_code = ["misc", "no-any-return", "index", "unused-ignore"]
